--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "generator-goncy",
+  "name": "generator-bau",
   "version": "2.0.2",
-  "description": "Goncy generator",
-  "author": "goncy",
+  "description": "Bau generator",
+  "author": "bautancredi",
   "license": "ISC",
   "files": [
     "generators"
